<resources>
    <string name="app_lang">eng</string>
    <string name="app_name">Soft 1C</string>
    <string name="text_adress">address</string>
    <string name="text_port">port</string>
    <string name="text_basename">basename</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_title_auth">Authorization</string>
    <string name="text_title_acceptance_list">Acceptance of goods</string>
    <string name="text_title_acceptance">Acceptance of good</string>
    <string name="text_title_test">Test</string>
    <string name="text_title_search">Search</string>
    <string name="text_field_is_empyt">Field required</string>
    <string name="text_for_search">Enter for search</string>
    <string name="text_submit">Submit</string>
    <string name="text_submitted">Submitted</string>
    <string name="text_acceptance">Acceptance</string>
    <string name="text_weight">Weight</string>
    <string name="text_size">Size</string>
    <string name="text_document_number">Document number</string>
    <string name="text_empty" />
    <string name="text_code_client">Code client</string>
    <string name="text_code_client_in_list">Code client</string>
    <string name="text_number_of_seats">Number of seats</string>
    <string name="text_id_card_number">Id card number</string>
    <string name="text_passport">Passport</string>
    <string name="text_zone">Zone</string>
    <string name="text_number_of_auto">Number of auto</string>
    <string name="text_number">Number</string>
    <string name="text_track_number">Track number</string>
    <string name="text_exclamation">!!!</string>
    <string name="text_currency">$</string>
    <string name="text_arrow">↑↑</string>
    <string name="text_brand">Brand</string>
    <string name="text_z">Z</string>
    <string name="text_store_address">Store address</string>
    <string name="text_store_number">Store number</string>
    <string name="text_representative">Representative</string>
    <string name="text_store_phone">Store phone number</string>
    <string name="text_product_type">Product type</string>
    <string name="text_package">Package</string>
    <string name="text_package_count">Package count</string>
    <string name="text_count_in_package">Count in package</string>
    <string name="text_save">Save</string>
    <string name="text_close">Close</string>
    <string name="text_downloading">Downloading…</string>
    <string name="text_downloading_text">Downloading %s…</string>
    <string name="text_print">Print</string>
    <string name="text_address">Address</string>
    <string name="text_element_not_found">Element not found</string>
    <string name="text_m3">m3</string>
    <string name="text_price_title">Price for m3:</string>
    <string name="text_zero">0</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_successfully_saved">Successfully saved</string>
    <string name="text_empty_document">Document has not chosen</string>
    <string name="text_code">Code</string>
    <string name="txt_number">№</string>
    <string name="text_date">Date</string>
    <string name="text_page_nums">Number of pages</string>
    <string name="text_printer_type">Printer model</string>
    <string name="text_printer_type_empty">Printer model is not configured</string>
    <string name="text_mac_address">MAC address</string>
    <string name="text_enter_mac_address">Enter MAC address</string>
    <string name="text_mac_address_empty">MAC address is not configured</string>
    <string name="text_bluetooth_off">Bluetooth is not turned on</string>
    <string name="text_seats">Seats</string>
    <string name="text_scan">Scan</string>

    <array name="protocols">
        <item>http</item>
        <item>https</item>
    </array>
    <string name="choose_file">Choose file</string>
    <string name="text_barcode">Barcode</string>
    <string name="txt_loading">Loading</string>
    <string name="text_warehouse">Warehouse</string>
    <string name="text_sender_warehouse">Sender\'s warehouse</string>
    <string name="text_getter_warehouse">Receiving warehouse</string>
    <string name="text_title_loading_list">Loading of goods</string>
    <string name="text_title_saving">Save the data?</string>
    <string name="text_title_open_saved">Open the saved data?</string>
    <string name="text_no_rights">No rights</string>
    <string name="ask_for_error_log">An unexpected error has occurred. Help developers by providing error details. Thank you for your support.</string>
    <string name="email_welcome_note" translatable="false">Dear Dev Team,\n\nApplication is just crashed, please check following error log for more details.\n\n\n</string>
    <string name="view_error_log">View error</string>
    <string name="share_error_log">Share error</string>
    <string name="email_error_log">Email error</string>
    <string name="copy_error_log">Copy error</string>
    <string name="close_app">Close app</string>
    <string name="disabled">Disabled</string>
    <string name="disable_reason">Reason</string>
    <string name="all_fields">All fields</string>

    <string name="not_creator">Is not creator</string>
    <string name="is_read_only">Document is readonly</string>
    <string name="is_printed">Document is printed</string>

    <string name="doc_log_info">Info</string>
    <string name="calc_dialog_clear">Clear</string>
    <string name="calc_dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="calc_answer">Ans</string>

    <string-array name="calc_dialog_errors">
        <item>Division by zero</item>
        <item>Out of bounds</item>
        <item>Result must be positive</item>
        <item>Result must be negative</item>
    </string-array>

    <string name="calc_dialog_erase">Erase</string>
    <string name="another_accept">Another person accepted</string>
    <string name="another_measure">Another person measured</string>
    <string name="another_weigh">Another person weighed</string>
    <string name="dont_show_again">Don\'t show this again</string>

    <string name="socket_timeout_exception">Timeout exceeded. No connection established</string>
    <string name="unauthorized">Wrong login or password</string>
    <string name="not_found">Base not found</string>
    <string name="no_connection_exception">"No internet connection "</string>
    <string name="text_more">More</string>
    <string name="text_recipient">Recipient</string>
    <string name="route">Route</string>
    <string name="text_front">Front</string>
    <string name="text_back">Back</string>
    <string name="text_volume">Volume</string>
    <string name="err_dublicate_barcode">Barcode is already added</string>
    <string name="car_parts_1">Front</string>
    <string name="car_parts_2">Back</string>

    <string-array name="car_parts">
         <item>@string/car_parts_1</item>
         <item>@string/car_parts_2</item>
    </string-array>

    <string name="text_container">Container</string>
    <string name="seat_number">Seat</string>

    <string name="txt_error_passport">Wrong passport</string>
    <string name="txt_is_blacklist">Client is in blacklist</string>
    <string name="txt_client_acceptance_blocked">Client temporarily blocked</string>
    <string name="txt_doc_not_printed">Document is not printed</string>
    <string name="stg_fill_barcodes">Fill barcodes of acceptance</string>

    <string name="txt_success_connection">Success connection</string>
    <string name="txt_no_connection">No connection</string>
    <string name="txt_check_connection">Check connection</string>


</resources>